<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="P_General_Control" Id="{27560784-429a-4cb9-b530-4b903427c533}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_General_Control
VAR
	bDoors : BOOL;
	State: INT;
	
	
//================	
	// Blink timer
	TIME_ON 			: TIME := T#1S;
	TIME_OFF 			: TIME := T#1S;	
	TIME_FAST_ON 		: TIME := T#250MS;
	TIME_FAST_OFF 		: TIME := T#250MS;
	TIME_SPECIAL_ON 	: TIME := T#50MS;
	TIME_SPECIAL_OFF 	: TIME := T#50MS;	
	
	BlinkTimer_ON: TON;
	BlinkTimer_OFF: TON;
	BlinkTimer_FAST_ON: TON;
	BlinkTimer_FAST_OFF: TON;
	BlinkTimer_SPEC_ON: TON;
	BlinkTimer_SPEC_OFF: TON;
	T_ON : BOOL;
	T_OFF : BOOL := TRUE;	
	T_FAST_ON : BOOL;
	T_FAST_OFF : BOOL := TRUE;	
	T_SPEC_ON : BOOL;
	T_SPEC_OFF : BOOL := TRUE;
//==================

	StateSpecial: INT;
	i: INT;
	Input1_RTRIG: R_TRIG;
	Input2_RTRIG: R_TRIG;
	tempCounter: INT;
	tempCounter2: INT;
	bSwitchToggle: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// OUT.BOX_OUT[7] := General.SpecialBlinkOn;

OVERVIEW_FBD();
	A_Doors();
	A_Permissions();
//	A_ButtonBoxes();
//	A_FeedButton();
	Blink();
	Blink_Faster();
	Blink_Special();
	]]></ST>
    </Implementation>
    <Folder Name="Blinkers" Id="{5c25f4da-2386-4bfa-a3e5-3fe24506dcb7}" />
    <Folder Name="Buttons" Id="{71ed4705-df05-4341-9724-6438c1a3eb09}" />
    <Action Name="A_Beacons" Id="{9f0f4f38-0331-4251-b759-68adeace686f}">
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_ButtonBoxes" Id="{78e610f5-06f1-42f9-a722-0082c1dc1f14}">
      <Implementation>
        <ST><![CDATA[

Input1_RTRIG(CLK:= IN.BOX_IN[1]);
IF Input1_RTRIG.Q THEN
	A_FeedButton(); 	
END_IF
	
Input2_RTRIG(CLK:= (IN.BOX_IN[2] OR IN.BOX_IN[3]), Q=> );
IF Input2_RTRIG.Q THEN
	A_Switch();
END_IF

]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_DoorLocks" Id="{b70c1c85-1e32-47fe-a80f-a4fd648c58be}">
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Doors" Id="{223db38c-ab74-4269-818b-d4d0b7d3de82}">
      <Implementation>
        <ST><![CDATA[
//"Ovisensori" hyppää outputista inputtiin, jos on päällä niin ohjelma saa käydä
OUT.BOX_OUT[8] := TRUE;

SAFETY.Doors_OK := IN.BOX_IN[8];

//Virtuaaliset kytkimet
SAFETY.Safety_to_robot 	:= TRUE;
General.Manual 			:= TRUE;]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_FeedButton" Id="{fd10e9fd-470d-417b-922d-3e15328c9f03}" FolderPath="Buttons\">
      <Implementation>
        <ST><![CDATA[
OUT.BOX_OUT[1] := TRUE;	
tempCounter := tempCounter+1;

(*
IF 	IN.BOX_IN[1]AND
	(General.BlinkOn AND
	General.ReadyForAction AND 
	SAFETY.Safety_OK )
THEN
	OUT.BOX_OUT[1] := TRUE;	
END_IF
*)
]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Switch" Id="{474615ab-9ca6-406f-b563-0fddc5938d75}" FolderPath="Buttons\">
      <Implementation>
        <ST><![CDATA[tempCounter2 := tempCounter2+1;

IF IN.BOX_IN[2] THEN
bSwitchToggle := TRUE;
END_IF
 
IF IN.BOX_IN[3] THEN
bSwitchToggle := FALSE;
END_IF

OUT.BOX_OUT[1] := bSwitchToggle;
]]></ST>
      </Implementation>
    </Action>
    <Action Name="Blink" Id="{cf892607-1afc-45ec-8503-4003e9a74f1f}" FolderPath="Blinkers\">
      <Implementation>
        <ST><![CDATA[
BlinkTimer_ON(IN:= T_ON , PT:= TIME_ON , Q=> , ET=> );
IF BlinkTimer_ON.Q THEN
	T_ON 	:= General.BlinkOn:= FALSE;
	T_OFF 	:= TRUE;	
END_IF

BlinkTimer_OFF(IN:= T_OFF , PT:= TIME_OFF , Q=> , ET=> );
IF BlinkTimer_OFF.Q THEN
	T_ON 	:= General.BlinkOn := TRUE;
	T_OFF	:= FALSE;
END_IF
]]></ST>
      </Implementation>
    </Action>
    <Action Name="Blink_Faster" Id="{4c379a4c-fd1e-485d-be50-2df9c3314d57}" FolderPath="Blinkers\">
      <Implementation>
        <ST><![CDATA[

BlinkTimer_FAST_ON(IN:= T_FAST_ON , PT:= TIME_FAST_ON , Q=> , ET=> );
IF BlinkTimer_FAST_ON.Q THEN
	T_FAST_ON	:= General.BlinkFAST_On:= FALSE;
	T_FAST_OFF 	:= TRUE;	
END_IF

BlinkTimer_FAST_OFF(IN:= T_FAST_OFF , PT:= TIME_FAST_OFF , Q=> , ET=> );
IF BlinkTimer_FAST_OFF.Q THEN
	T_FAST_ON 	:= General.BlinkFAST_On := TRUE;
	T_FAST_OFF	:= FALSE;
END_IF

]]></ST>
      </Implementation>
    </Action>
    <Action Name="Blink_Special" Id="{ba255915-c92f-459f-ac44-5943878c9a83}" FolderPath="Blinkers\">
      <Implementation>
        <ST><![CDATA[
CASE StateSpecial OF
0:

	IF i > 5 THEN
		StateSpecial := 1;
		i := 0;
		ELSE
		BlinkTimer_SPEC_ON(IN:= T_SPEC_ON , PT:= (TIME_SPECIAL_ON*5) , Q=> , ET=> );
		IF BlinkTimer_SPEC_ON.Q THEN
			T_SPEC_ON 	:= General.BlinkSpecial_ON:= FALSE;
			T_SPEC_OFF 	:= TRUE;	
		END_IF
		
		BlinkTimer_SPEC_OFF(IN:= T_SPEC_OFF , PT:= (TIME_SPECIAL_OFF*5) , Q=> , ET=> );
		IF BlinkTimer_SPEC_OFF.Q THEN
			T_SPEC_ON 	:= General.BlinkSpecial_ON := TRUE;
			T_SPEC_OFF	:= FALSE;
		i:= i+1;
		END_IF
	END_IF

	1: 

	IF i > 1 THEN
		StateSpecial := 0;
		i := 0;
		ELSE
		BlinkTimer_SPEC_ON(IN:= T_SPEC_ON , PT:= (TIME_SPECIAL_ON*10) , Q=> , ET=> );
		IF BlinkTimer_SPEC_ON.Q THEN
			T_SPEC_ON 	:= General.BlinkSpecial_ON:= FALSE;
			T_SPEC_OFF 	:= TRUE;	
		END_IF
		
		BlinkTimer_SPEC_OFF(IN:= T_SPEC_OFF , PT:= (TIME_SPECIAL_OFF*10) , Q=> , ET=> );
		IF BlinkTimer_SPEC_OFF.Q THEN
			T_SPEC_ON 	:= General.BlinkSpecial_ON := TRUE;
			T_SPEC_OFF	:= FALSE;
			i:= i+1;
		END_IF
	END_IF
END_CASE
]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="P_General_Control">
      <LineId Id="88" Count="1" />
      <LineId Id="76" Count="2" />
      <LineId Id="313" Count="0" />
      <LineId Id="312" Count="0" />
      <LineId Id="156" Count="2" />
      <LineId Id="83" Count="0" />
    </LineIds>
    <LineIds Name="P_General_Control.A_Beacons">
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="P_General_Control.A_ButtonBoxes">
      <LineId Id="25" Count="1" />
      <LineId Id="21" Count="3" />
      <LineId Id="3" Count="0" />
      <LineId Id="1" Count="0" />
      <LineId Id="18" Count="2" />
      <LineId Id="8" Count="0" />
      <LineId Id="13" Count="0" />
    </LineIds>
    <LineIds Name="P_General_Control.A_DoorLocks">
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="P_General_Control.A_Doors">
      <LineId Id="2" Count="0" />
      <LineId Id="1" Count="0" />
      <LineId Id="3" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="9" Count="1" />
    </LineIds>
    <LineIds Name="P_General_Control.A_FeedButton">
      <LineId Id="69" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="67" Count="1" />
      <LineId Id="28" Count="0" />
      <LineId Id="61" Count="3" />
      <LineId Id="58" Count="2" />
      <LineId Id="1" Count="0" />
      <LineId Id="66" Count="0" />
    </LineIds>
    <LineIds Name="P_General_Control.A_Switch">
      <LineId Id="19" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="16" Count="2" />
      <LineId Id="28" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="37" Count="0" />
    </LineIds>
    <LineIds Name="P_General_Control.Blink">
      <LineId Id="16" Count="0" />
      <LineId Id="4" Count="10" />
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="P_General_Control.Blink_Faster">
      <LineId Id="19" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="4" Count="10" />
      <LineId Id="18" Count="0" />
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="P_General_Control.Blink_Special">
      <LineId Id="19" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="105" Count="0" />
      <LineId Id="101" Count="1" />
      <LineId Id="106" Count="0" />
      <LineId Id="99" Count="0" />
      <LineId Id="4" Count="9" />
      <LineId Id="52" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="100" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="1" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="103" Count="1" />
      <LineId Id="107" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="34" Count="9" />
      <LineId Id="54" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="47" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="55" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>