<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="P_General_Control" Id="{27560784-429a-4cb9-b530-4b903427c533}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_General_Control
VAR
	bDoors : BOOL;
	State: INT;
	
	
//================	
	// Blink timer
	TIME_ON 			: TIME := T#1S;
	TIME_OFF 			: TIME := T#1S;	
	TIME_FAST_ON 		: TIME := T#250MS;
	TIME_FAST_OFF 		: TIME := T#250MS;
	TIME_SPECIAL_ON 	: TIME := T#50MS;
	TIME_SPECIAL_OFF 	: TIME := T#50MS;	
	
	BlinkTimer_ON: TON;
	BlinkTimer_OFF: TON;
	BlinkTimer_FAST_ON: TON;
	BlinkTimer_FAST_OFF: TON;
	BlinkTimer_SPEC_ON: TON;
	BlinkTimer_SPEC_OFF: TON;
	T_ON : BOOL;
	T_OFF : BOOL := TRUE;	
	T_FAST_ON : BOOL;
	T_FAST_OFF : BOOL := TRUE;	
	T_SPEC_ON : BOOL;
	T_SPEC_OFF : BOOL := TRUE;
//==================

	StateSpecial: INT;
	i: INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// OUT.BOX_OUT[7] := General.SpecialBlinkOn;

FBD_Assign_IO();
	A_Doors();
	A_Permissions();
	A_FeedButton();
	Blink();
	Blink_Faster();
	Blink_Special();
	
	]]></ST>
    </Implementation>
    <Folder Name="Blinkers" Id="{5c25f4da-2386-4bfa-a3e5-3fe24506dcb7}" />
    <Action Name="A_Beacons" Id="{9f0f4f38-0331-4251-b759-68adeace686f}">
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_ButtonBoxes" Id="{78e610f5-06f1-42f9-a722-0082c1dc1f14}">
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_DoorLocks" Id="{b70c1c85-1e32-47fe-a80f-a4fd648c58be}">
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Doors" Id="{223db38c-ab74-4269-818b-d4d0b7d3de82}">
      <Implementation>
        <ST><![CDATA[
//"Ovisensori" hyppää outputista inputtiin, jos on päällä niin ohjelma saa käydä
OUT.BOX_OUT[8] := TRUE;

SAFETY.Doors_OK := IN.BOX_IN[8];

//Virtuaaliset kytkimet
SAFETY.Safety_to_robot 	:= TRUE;
General.Manual 			:= TRUE;]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_FeedButton" Id="{fd10e9fd-470d-417b-922d-3e15328c9f03}">
      <Implementation>
        <ST><![CDATA[
IF 	IN.BOX_IN[1]AND
	(General.BlinkOn AND
	General.ReadyForAction AND 
	SAFETY.Safety_OK )
THEN
	OUT.BOX_OUT[1] := TRUE;	
END_IF
]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_Permissions" Id="{8a21b514-31fb-4c74-a1e6-3800d886b191}">
      <Implementation>
        <NWL>
          <XmlArchive>
            <Data>
              <o xml:space="preserve" t="NWLImplementationObject">
                <v n="NetworkListComment">""</v>
                <v n="DefaultViewMode">"Fbd"</v>
                <l2 n="NetworkList" cet="Network">
                  <o>
                    <v n="ILActive">false</v>
                    <v n="FBDValid">false</v>
                    <v n="ILValid">false</v>
                    <l2 n="ILLines" />
                    <v n="Comment">""</v>
                    <v n="Title">""</v>
                    <v n="Label">""</v>
                    <v n="OutCommented">false</v>
                    <l2 n="NetworkItems" cet="BoxTreeAssign">
                      <o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems" cet="Operand">
                            <o>
                              <v n="Operand">"SAFETY.Safety_OK"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">24L</v>
                            </o>
                          </l2>
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">false</v>
                          <v n="Extensible">false</v>
                        </o>
                        <o n="RValue" t="BoxTreeBox">
                          <v n="BoxType">"AND"</v>
                          <o n="Instance" t="Operand">
                            <n n="Operand" />
                            <v n="Type">""</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">true</v>
                            <v n="Id">18L</v>
                          </o>
                          <o n="OutputItems" t="OutputItemList">
                            <l2 n="OutputItems">
                              <n />
                            </l2>
                          </o>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                            <v n="Extensible">false</v>
                          </o>
                          <n n="InputFlags" />
                          <l2 n="InputItems" cet="BoxTreeOperand">
                            <o>
                              <o n="Operand" t="Operand">
                                <v n="Operand">"SAFETY.Doors_OK"</v>
                                <v n="Type">"BOOL"</v>
                                <v n="Comment">""</v>
                                <v n="SymbolComment">""</v>
                                <v n="Address">""</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">false</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">21L</v>
                              </o>
                              <v n="Id">20L</v>
                            </o>
                            <o>
                              <o n="Operand" t="Operand">
                                <v n="Operand">"SAFETY.Safety_to_robot"</v>
                                <v n="Type">"BOOL"</v>
                                <v n="Comment">""</v>
                                <v n="SymbolComment">""</v>
                                <v n="Address">""</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">false</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">23L</v>
                              </o>
                              <v n="Id">22L</v>
                            </o>
                          </l2>
                          <o n="InputParam" t="ParamList">
                            <l2 n="Names" />
                            <l2 n="Types" />
                          </o>
                          <o n="OutputParam" t="ParamList">
                            <l2 n="Names" cet="String">
                              <v></v>
                            </l2>
                            <l2 n="Types" cet="String">
                              <v>BOOL</v>
                            </l2>
                          </o>
                          <v n="CallType" t="Operator">And</v>
                          <v n="EN">false</v>
                          <v n="ENO">false</v>
                          <n n="STSnippet" />
                          <v n="ContainsExtensibleInputs">false</v>
                          <v n="ProvidesSTSnippet">false</v>
                          <v n="Id">19L</v>
                        </o>
                        <v n="Id">25L</v>
                      </o>
                    </l2>
                    <l2 n="Connectors" />
                    <v n="Id">17L</v>
                  </o>
                  <o>
                    <v n="ILActive">false</v>
                    <v n="FBDValid">false</v>
                    <v n="ILValid">false</v>
                    <l2 n="ILLines" />
                    <v n="Comment">""</v>
                    <v n="Title">""</v>
                    <v n="Label">""</v>
                    <v n="OutCommented">false</v>
                    <l2 n="NetworkItems" cet="BoxTreeAssign">
                      <o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems" cet="Operand">
                            <o>
                              <v n="Operand">"General.ReadyForAction"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">8L</v>
                            </o>
                          </l2>
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">false</v>
                          <v n="Extensible">false</v>
                        </o>
                        <o n="RValue" t="BoxTreeBox">
                          <v n="BoxType">"AND"</v>
                          <o n="Instance" t="Operand">
                            <n n="Operand" />
                            <v n="Type">""</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">true</v>
                            <v n="Id">2L</v>
                          </o>
                          <o n="OutputItems" t="OutputItemList">
                            <l2 n="OutputItems">
                              <n />
                            </l2>
                          </o>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                            <v n="Extensible">false</v>
                          </o>
                          <n n="InputFlags" />
                          <l2 n="InputItems" cet="BoxTreeOperand">
                            <o>
                              <o n="Operand" t="Operand">
                                <v n="Operand">"SAFETY.Safety_OK"</v>
                                <v n="Type">"BOOL"</v>
                                <v n="Comment">""</v>
                                <v n="SymbolComment">""</v>
                                <v n="Address">""</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">false</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">5L</v>
                              </o>
                              <v n="Id">4L</v>
                            </o>
                            <o>
                              <o n="Operand" t="Operand">
                                <v n="Operand">"General.Manual"</v>
                                <v n="Type">"BOOL"</v>
                                <v n="Comment">""</v>
                                <v n="SymbolComment">""</v>
                                <v n="Address">""</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">false</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">7L</v>
                              </o>
                              <v n="Id">6L</v>
                            </o>
                          </l2>
                          <o n="InputParam" t="ParamList">
                            <l2 n="Names" />
                            <l2 n="Types" />
                          </o>
                          <o n="OutputParam" t="ParamList">
                            <l2 n="Names" cet="String">
                              <v></v>
                            </l2>
                            <l2 n="Types" cet="String">
                              <v>BOOL</v>
                            </l2>
                          </o>
                          <v n="CallType" t="Operator">And</v>
                          <v n="EN">false</v>
                          <v n="ENO">false</v>
                          <n n="STSnippet" />
                          <v n="ContainsExtensibleInputs">false</v>
                          <v n="ProvidesSTSnippet">false</v>
                          <v n="Id">3L</v>
                        </o>
                        <v n="Id">9L</v>
                      </o>
                    </l2>
                    <l2 n="Connectors" />
                    <v n="Id">1L</v>
                  </o>
                </l2>
                <v n="BranchCounter">0</v>
                <v n="ValidIds">true</v>
              </o>
            </Data>
            <TypeList>
              <Type n="Boolean">System.Boolean</Type>
              <Type n="BoxTreeAssign">{9873c309-1f09-4ebf-9078-42d8057ef11b}</Type>
              <Type n="BoxTreeBox">{acfc6f68-8e3a-4af5-bf81-3dd512095a46}</Type>
              <Type n="BoxTreeOperand">{9de7f100-1b87-424c-a62e-45b0cfc85ed2}</Type>
              <Type n="Flags">{668066f2-6069-46b3-8962-8db8d13d7db2}</Type>
              <Type n="Int32">System.Int32</Type>
              <Type n="Int64">System.Int64</Type>
              <Type n="Network">{d9a99d73-b633-47db-b876-a752acb25871}</Type>
              <Type n="NWLImplementationObject">{25e509de-33d4-4447-93f8-c9e4ea381c8b}</Type>
              <Type n="Operand">{c9b2f165-48a2-4a45-8326-3952d8a3d708}</Type>
              <Type n="Operator">{bffb3c53-f105-4e85-aba2-e30df579d75f}</Type>
              <Type n="OutputItemList">{f40d3e09-c02c-4522-a88c-dac23558cfc4}</Type>
              <Type n="ParamList">{71496971-9e0c-4677-a832-b9583b571130}</Type>
              <Type n="String">System.String</Type>
            </TypeList>
          </XmlArchive>
        </NWL>
      </Implementation>
    </Action>
    <Action Name="Blink" Id="{cf892607-1afc-45ec-8503-4003e9a74f1f}" FolderPath="Blinkers\">
      <Implementation>
        <ST><![CDATA[
BlinkTimer_ON(IN:= T_ON , PT:= TIME_ON , Q=> , ET=> );
IF BlinkTimer_ON.Q THEN
	T_ON 	:= General.BlinkOn:= FALSE;
	T_OFF 	:= TRUE;	
END_IF

BlinkTimer_OFF(IN:= T_OFF , PT:= TIME_OFF , Q=> , ET=> );
IF BlinkTimer_OFF.Q THEN
	T_ON 	:= General.BlinkOn := TRUE;
	T_OFF	:= FALSE;
END_IF
]]></ST>
      </Implementation>
    </Action>
    <Action Name="Blink_Faster" Id="{4c379a4c-fd1e-485d-be50-2df9c3314d57}" FolderPath="Blinkers\">
      <Implementation>
        <ST><![CDATA[

BlinkTimer_FAST_ON(IN:= T_FAST_ON , PT:= TIME_FAST_ON , Q=> , ET=> );
IF BlinkTimer_FAST_ON.Q THEN
	T_FAST_ON	:= General.FastBlinkOn:= FALSE;
	T_FAST_OFF 	:= TRUE;	
END_IF

BlinkTimer_FAST_OFF(IN:= T_FAST_OFF , PT:= TIME_FAST_OFF , Q=> , ET=> );
IF BlinkTimer_FAST_OFF.Q THEN
	T_FAST_ON 	:= General.FastBlinkOn := TRUE;
	T_FAST_OFF	:= FALSE;
END_IF

]]></ST>
      </Implementation>
    </Action>
    <Action Name="Blink_Special" Id="{ba255915-c92f-459f-ac44-5943878c9a83}" FolderPath="Blinkers\">
      <Implementation>
        <ST><![CDATA[
CASE StateSpecial OF
0:

	IF i > 5 THEN
		StateSpecial := 1;
		i := 0;
		ELSE
		BlinkTimer_SPEC_ON(IN:= T_SPEC_ON , PT:= (TIME_SPECIAL_ON*5) , Q=> , ET=> );
		IF BlinkTimer_SPEC_ON.Q THEN
			T_SPEC_ON 	:= General.SpecialBlinkOn:= FALSE;
			T_SPEC_OFF 	:= TRUE;	
		END_IF
		
		BlinkTimer_SPEC_OFF(IN:= T_SPEC_OFF , PT:= (TIME_SPECIAL_OFF*5) , Q=> , ET=> );
		IF BlinkTimer_SPEC_OFF.Q THEN
			T_SPEC_ON 	:= General.SpecialBlinkOn := TRUE;
			T_SPEC_OFF	:= FALSE;
		i:= i+1;
		END_IF
	END_IF

	1: 

	IF i > 1 THEN
		StateSpecial := 0;
		i := 0;
		ELSE
		BlinkTimer_SPEC_ON(IN:= T_SPEC_ON , PT:= (TIME_SPECIAL_ON*10) , Q=> , ET=> );
		IF BlinkTimer_SPEC_ON.Q THEN
			T_SPEC_ON 	:= General.SpecialBlinkOn:= FALSE;
			T_SPEC_OFF 	:= TRUE;	
		END_IF
		
		BlinkTimer_SPEC_OFF(IN:= T_SPEC_OFF , PT:= (TIME_SPECIAL_OFF*10) , Q=> , ET=> );
		IF BlinkTimer_SPEC_OFF.Q THEN
			T_SPEC_ON 	:= General.SpecialBlinkOn := TRUE;
			T_SPEC_OFF	:= FALSE;
			i:= i+1;
		END_IF
	END_IF
END_CASE
]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="P_General_Control">
      <LineId Id="88" Count="1" />
      <LineId Id="76" Count="3" />
      <LineId Id="156" Count="2" />
      <LineId Id="83" Count="0" />
      <LineId Id="55" Count="0" />
    </LineIds>
    <LineIds Name="P_General_Control.A_Beacons">
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="P_General_Control.A_ButtonBoxes">
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="P_General_Control.A_DoorLocks">
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="P_General_Control.A_Doors">
      <LineId Id="2" Count="0" />
      <LineId Id="1" Count="0" />
      <LineId Id="3" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="9" Count="1" />
    </LineIds>
    <LineIds Name="P_General_Control.A_FeedButton">
      <LineId Id="28" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="33" Count="1" />
      <LineId Id="57" Count="2" />
      <LineId Id="23" Count="0" />
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="P_General_Control.Blink">
      <LineId Id="16" Count="0" />
      <LineId Id="4" Count="10" />
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="P_General_Control.Blink_Faster">
      <LineId Id="19" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="4" Count="10" />
      <LineId Id="18" Count="0" />
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="P_General_Control.Blink_Special">
      <LineId Id="19" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="105" Count="0" />
      <LineId Id="101" Count="1" />
      <LineId Id="106" Count="0" />
      <LineId Id="99" Count="0" />
      <LineId Id="4" Count="9" />
      <LineId Id="52" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="100" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="1" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="103" Count="1" />
      <LineId Id="107" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="34" Count="9" />
      <LineId Id="54" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="47" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="55" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>